end day one commit

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div><!--end nav column-->
       </div><!--end nav row-->
     
-      <div class="row row-eq-height" ng-controller="GitCtrl">
+      <div class="row row-eq-height" ng-controller="GitNCtrl">
         <div class="col-md-3 sideStyle">
         </div><!--end sidebar column-->
 
@@ -26,8 +26,8 @@
       </div><!--end row/controller-->
     </div><!--end container-->
 
-    <!-- <script src="lib/bower_components/requirejs/require.js"></script>
-    <script src="main-built.js"></script> -->
+    <!-- // <script src="lib/bower_components/requirejs/require.js"></script> -->
+    <!-- // <script src="main-built.js"></script> -->
 
     <script data-main="app/require-config" src="lib/bower_components/requirejs/require.js"></script>
   </body>
