committing before trying

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12 navStyle">
-          <span><a href="index.html">Home</a></span>
+          <span><a href="index.html#/which">Home</a></span>
         </div>
       </div><!--end nav row-->
     </div><!--end container-->
