added edit functionality, styling mostly complete

--- a/index.html
+++ b/index.html
@@ -3,22 +3,16 @@
   <head>
     <link rel="stylesheet" type="text/css" href="./lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <title>WhatChuGitN</title>
   </head>
 
   <body>
 
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-12 navStyle">
-          <span><a href="index.html#/which">Home</a></span>
-        </div>
-      </div><!--end nav row-->
-    </div><!--end container-->
-
     <div ng-view></div>
     
     <script data-main="app/require-config" src="lib/bower_components/requirejs/require.js"></script>
+
   </body>
 </html>
